--- a/views/admin/bannerManagement.ejs
+++ b/views/admin/bannerManagement.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div class="backButton">
-        <a href="/admin/productList">
+        <a href="/admin/dashBoard">
             <button class="btn btn-dark">Back</button>
         </a>
     </div>
