--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -11,7 +11,7 @@
 
 <% if(product){%>
     <div class="container mainCont mb-5">
-        <h3 class="mb-3 mt-3 text-center" style="font-family: 'Michroma', sans-serif;">Edit Product</h3>
+        <h3 class="mb-3  text-center" style="font-family: 'Michroma', sans-serif;">Edit Product</h3>
         
         <a href="/admin/deleteProductCompletely?id=<%=product._id%>" class="btn btn-danger ms-auto mb-3"  id="button" >Delete</a>
 
