--- a/views/admin/orderDetailed.ejs
+++ b/views/admin/orderDetailed.ejs
@@ -1,6 +1,7 @@
 
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/orderConfirmation.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/card.css">
 
 </head>
 <body>
@@ -14,10 +15,12 @@
     </div>
     <div class="d-flex" style="justify-content: space-around; flex-wrap: wrap;">
         <% order.products.items.forEach(item => { %>
-    <div class="card mb-3" style="max-width: 540px; border: 1px solid black ; border-radius: 10px;">
+    <div class="card mb-3" style="max-width: 540px; ">
     <div class="row g-0">
       <div class="col-md-4" style=" border-radius: 10px; display: flex; justify-content: center; align-items: center; background-color: rgb(246, 246, 246);">
-        <img src="../../public/productImages/<%=item.product.images[0]%>" class="img-fluid rounded-start" alt="..." style="border-radius: 20px;">
+        <a href="/admin/productDetailed?id=<%=item.product._id%>">
+          <img src="../../public/productImages/<%=item.product.images[0]%>" class="img-fluid rounded-start" alt="..." style="border-radius: 20px;">
+        </a>
       </div>
       <div class="col-md-8">
         <div class="card-body">
