--- a/views/chat/adminChat.ejs
+++ b/views/chat/adminChat.ejs
@@ -69,7 +69,7 @@ a{
 </style>
 </head>
 <body>
-  <%- include('./layout/adminHeader')-%>
+  <%- include('../layout/adminHeader')-%>
    <h3 class="text-center" style="margin-top: 20px;   text-transform: capitalize; ">Total Chats: <%=locals?.clients.length%> <span id="totalUsers"></span></h3>
       <div class="container">
         <div class="users mb-5" style="margin-top: 50px; gap: 15px;">
