--- a/views/layout/adminHeader.ejs
+++ b/views/layout/adminHeader.ejs
@@ -102,7 +102,7 @@
                 </div>
               </div>
 
-          <a class="" href="/admin/productList/"><h3 class="text-danger"><u>Home</u></h3></a>
+          <a class="" href="/admin/dashBoard/"><h3 class="text-danger"><u>Home</u></h3></a>
             
                </div>
     </div>
