--- a/views/user/brandBased.ejs
+++ b/views/user/brandBased.ejs
@@ -1,30 +1,27 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/homePage.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/card.css">
-
+<link rel="stylesheet" type="text/css" href="../../public/css/brandBasedPage.css">
 </head>
 <body>
     <%- include('../layout/header') %>
-
-
-    <div class="container productCont" style="margin-top: 20px;">
+    <div class="container productCont">
         <% datas?.forEach(brand => { %>
-            <h2 class="text mt-2" style="font-family: 'Michroma', sans-serif;"><%= brand._id %> : </h2>
+            <h2 class="text mt-2 mainFontFamily"><%= brand._id %> : </h2>
             <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4 d-flex mb-5" style="justify-content: center;">
                 <% if (brand.products && brand.products.length > 0) { %>
                     <% brand.products.forEach(product => { %>
                         <div class="col">
                             <div class="card h-100">
-                                <a href="/user/productDetailed?id=<%= product._id %>" style="text-decoration: none; color: black;">
+                                <a href="/user/productDetailed?id=<%= product._id %>" style="color: black;">
                                     <img src="<%= product.images[0]%>" class="card-img-top" alt="..." style="position: relative;">
                                 <%if(product?.discountPercentage>0){%>
-                                    <span class="text-white" style="position: absolute; top: 10px; right: 10px; font-size: 15px; background-color:#CC0C39!important; border-radius: 10px; font-weight: bold; padding:8px ;"><%=product.discountPercentage%>% off</span>
+                                    <span class="text-white discountText"><%=product.discountPercentage%>% off</span>
                                     <%}%>
-                                    <div class="card-body d-flex justify-content-center" style="flex-direction: column; align-items: center; font-family: 'Michroma', sans-serif;">
+                                    <div class="card-body d-flex justify-content-center mainFontFamily" style="flex-direction: column; align-items: center;">
                                         <h5 class="card-title text-center mb-2"><%= product.name %></h5>
                                         <a href="/user/productDetailed?id=<%=product._id%>" class="btn btn-dark mt-auto rounded-pill"><%if(product?.discountPercentage&&product?.discountPercentage>0){%>
                                             <span class="text-danger"> &#x20B9 <%= (product.price-((product?.price*product?.discountPercentage)/100)).toFixed(0)%></span>
-                                           
                                         <%}else {%>
                                             &#x20B9 <%= product?.price%>
                                         <%}%>
@@ -42,23 +39,6 @@
             </div>
         <% }); %>
     </div>
-    
-
-<div class="container Cont mt-5">
-    <div class="responsive-container">
-        <div class="card info-box  ">
-          <h2>Free Delivery</h2>
-          <p>Enjoy the ultimate convenience with our FREE delivery service!</p>
-        </div>
-        <div class="card info-box  " style="margin-top: 5px; margin-bottom: 5px;">
-          <h2>24/7 Support</h2>
-          <p>Our dedicated team is here for you 24/7, ready to assist with any questions or concerns.</p>
-        </div>
-        <div class="card info-box  ">
-          <h2>Return Policy</h2>
-          <p>Your satisfaction is our top priority!policy is designed for you.</p>
-        </div>
-    </div>
-</div>
+<%- include('../layout/adText')-%>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
