--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -1,15 +1,15 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/homePage.css">
 <link rel="stylesheet" type="text/css" href="../../public/css/card.css">
-
+<link rel="stylesheet" type="text/css" href="../../public/css/cart.css">
 </head>
 <body>
     <%- include('../layout/header')-%>
-    <div class="container d-flex mb-4 mt-2" style="justify-content: space-between; align-items: center;">
-        <h2 class="text" style="margin-top: 20px;  font-family: 'Michroma', sans-serif;"><u>Cart!</u></h2>
-        <a href="/user/wishlist/" class="btn btn-dark rounded"><h4 style="margin-top: 5px;  font-family: 'Michroma', sans-serif;">Go To Wishlist</h4></a>
+    <div class="container d-flex mb-4 mt-2 mainContainer">
+        <h2 class="text mainFontFamily"><u>Cart!</u></h2>
+        <a href="/user/wishlist/" class="btn btn-dark rounded"><h4 class="mainFontFamily" style="margin-top: 5px;">Go To Wishlist</h4></a>
     </div>
-    <div class="container productCont" style="margin-top: 10px; border: none; background-color: #ffffff; ">
+    <div class="container productCont productContInCart">
         <% if (locals?.products) { %>
             <% products?.forEach(item => { %>
                 <%var size=item.size%>
@@ -17,7 +17,7 @@
                 <%var quantity=item.quantity%>
                 <% const product = item.product; %>
                 <div class="container" style="margin-top: 10px; margin-bottom: 10px;">
-                    <div class="row" style="border: 1px solid rgb(195, 194, 194); border-radius: 10px; ">
+                    <div class="row productRow">
                         <div class="col-12 col-lg-5 p-2 d-flex align-items-center">
                             <div class="row">
                                 <% if (product?.images) { %>
@@ -31,72 +31,62 @@
                                 <% } %>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-7 pt-1 pb-1 ps-4 pe-2 " style="background-color: #ffffff; border-radius: 20px;">
-                            <a href="/user/productDetailed?id=<%=product?._id%>" style="text-decoration: none; color: black;">
-                            <h4 class="card-title mb-1 mt-1 text-center" style="font-family: 'Michroma', sans-serif;"><u><%= product?.name %></u></h4></a>
-                            <div class="d-flex align-item-center ms-3 me-3 mt-5" style="flex-wrap: wrap; justify-content: space-between;">
-                                <a class="btn btn-dark rounded-pill text-center text-danger ps-4 pe-4 pt-2" style="font-size: 30px; letter-spacing: 2px;">&#x20B9 <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
+                        <div class="col-12 col-lg-7 pt-1 pb-1 ps-4 pe-2 productImage">
+                            <a href="/user/productDetailed?id=<%=product?._id%>" style="color: black;">
+                            <h4 class="card-title mb-1 mt-1 text-center mainFontFamily"><u><%= product?.name %></u></h4></a>
+                            <div class="d-flex align-item-center ms-3 me-3 mt-5 productDetailsCont">
+                                <a class="btn btn-dark rounded-pill text-center text-danger ps-4 pe-4 pt-2">&#x20B9 <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
                                     <%= (product.price-((product?.price*product?.discountPercentage)/100)).toFixed(2)%>
                                 <%}else {%>
                                     <%= (product?.price).toFixed(2)%>
                                 <%}%></a>
-                            
-                                <div class="d-flex pe-1 " style="justify-content: flex-end; margin-top: 10px;">
+                                <div class="d-flex pe-1" style="justify-content: flex-end; margin-top: 10px;">
                                     <a href="" id="<%=_id%>" class="removeFromCart btn btn-dark rounded-pill  d-flex justify-content-center pt-2 pb-2 ">
                                         <h3 class="text-danger" style="font-family: 'Michroma', sans-serif;">remove</h3>
                                     </a>
                                 </div>
                             </div>
-                            
                             <div class="container mt-2">
-                                
-                                <div class="btn-group mb-2 d-flex" style="justify-content: space-evenly; row-gap: 10px; column-gap: 20px; flex-wrap: wrap;" role="group" aria-label="Sizes">
-                                  
-                                    <p class=" btn rounded-pill btn-dark pb-2 " style="font-family: 'Michroma', sans-serif; font-size: 20px;">
+                                <div class="btn-group mb-2 d-flex sizeContainer" role="group" aria-label="Sizes">
+                                    <p class=" btn rounded-pill btn-dark pb-2 mainFontFamily" style="font-size: 20px;">
                                         <span class="fs-4">Size :</span><span class="sizeOfTheProduct"><%=size%></span>
                                     </p>
                                     <% if (product?.deleted===false && product?.quantity>0) { %>
-                                        <p class=" btn rounded-pill btn-dark pb-2" id="<%=_id%>" style="font-family: 'Michroma', sans-serif; font-size: 20px;">
+                                        <p class=" btn rounded-pill btn-dark pb-2 mainFontFamily" id="<%=_id%>" style="font-size: 20px;">
                                             <button id="<%=_id%>" class="decreaseQuantity btn rounded btn-light me-2 pb-2">-</button> 
                                             <span class="fs-4">Quantity :</span>
                                             <span id="<%=_id%>"><%=quantity%></span> 
                                             <button class=" increaseQuantity btn rounded btn-light pb-2 ms-2" id="<%=_id%>">+</button>
                                         </p>
                                     <% } else { %>
-                                       
                                     <% } %>
-                                    
-                                
                             </div>
                                 <div class="d-flex mt-3;" style="flex-wrap: wrap; column-gap:30px;">
-                                    <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;">
+                                    <p class="mainFontFamily" style="font-size: 20px;">
                                         <span class="fs-5"><b>Category :</b> </span><%= product?.category?.name %>
                                     </p>
-                                    <p class="" style="font-family: 'Michroma', sans-serif; font-size: 20px;">
+                                    <p class="mainFontFamily" style="font-size: 20px;">
                                         <span class="fs-5"><b>Brand :</b></span><%= product?.brand %>
                                     </p>
                                 </div>
-
                                     <% if (product?.deleted===false && product?.quantity>0) { %>
-                                        <a class="subTotal btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h4 style=" font-family: 'Michroma', sans-serif;"><span>Sub Total : </span><span class="">&#x20B9</span><span class="" id="<%=_id%>subTotal"> <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
+                                        <a class="subTotal btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2 mainFontFamily"><h4 ><span>Sub Total : </span><span>&#x20B9</span><span id="<%=_id%>subTotal"> <%if(product?.discountPercentage&&product?.discountPercentage>0){%>
                                             <%=((product.price-((product.price*product.discountPercentage)/100))*quantity).toFixed(2)%>
                                             <%}else{%>
                                                 <%=product.price*quantity%>
                                                 <%}%>
                                         </span><span></span></h3></a> 
                                     <% } else { %>
-                                        <a class="text-danger btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h3 style=" font-family: 'Michroma', sans-serif;">Not Available!</h3></a>
+                                        <a class="text-danger btn btn-dark d-flex justify-content-center mt-4 pt-1 pb-1 mb-2" ><h3 class="mainFontFamily">Not Available!</h3></a>
                                     <% } %>
-
                             </div>
                         </div>
                     </div>
                 </div>
-                
             <% })} %>
             <% if(locals.products.length===0) { %>
-                <div class="col rounded" style="border: 1px solid black;">
-                    <p class="text-center text-danger pt-5 pb-5" style="font-size: 25px; font-family: 'Michroma', sans-serif;">
+                <div class="col rounded border border-dark">
+                    <p class="text-center text-danger pt-5 pb-5 mainFontFamily" style="font-size: 25px;">
                         <u>Your cart is empty!</u>
                     </p>
                 </div>
@@ -104,67 +94,15 @@
             <% if(locals.products.length!==0 ) { %>
                 <div class="container d-flex justify-content-center">
                     <a href="/user/checkOut/" class="btn btn-dark d-flex flex-column justify-content-center mt-4 pt-3 pb-3 ps-4 pe-4" style="width: fit-content;">
-                        <h3 style="font-family: 'Michroma', sans-serif; margin-bottom: 5px;">Total : <span class="text-danger"> &#x20B9 </span><span  class="totalPrice" style="color: red; letter-spacing: 2px;"><%=locals?.total%></span><span style="color: red; letter-spacing: 2px;">&nbsp;</span></h3>
-                        <h4 style="font-family: 'Michroma', sans-serif; margin: 0; border-top: 4px dashed rgb(205, 205, 205);">Check Out Now</h4>
+                        <h3 class="mainFontFamily" style="margin-bottom: 5px;">Total : <span class="text-danger"> &#x20B9 </span><span  class="totalPrice totalPriceText"><%=locals?.total%></span><span class="totalPriceText">&nbsp;</span></h3>
+                        <h4 class="checkOutNowButton">Check Out Now</h4>
                     </a>
-            </div>
+                </div>
             <% } %>
-            
         </div>
     </div>
-   
-
-<div class="container Cont mt-5">
-    <div class="responsive-container">
-        <div class="card info-box ">
-          <h2>Free Delivery</h2>
-          <p>Enjoy the ultimate convenience with our FREE delivery service!</p>
-        </div>
-        <div class="card info-box " style="margin-top: 5px; margin-bottom: 5px;">
-          <h2>24/7 Support</h2>
-          <p>Our dedicated team is here for you 24/7, ready to assist with any questions or concerns.</p>
-        </div>
-        <div class="card info-box ">
-          <h2>Return Policy</h2>
-          <p>Your satisfaction is our top priority!policy is designed for you.</p>
-        </div>
-    </div>
-</div>
-<div class="alertKey">
-    <% if(locals.message) { %>
-      <div class="alert alert-danger alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-        data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-        <strong><%= message %></strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-      
-      <script>
-        // Add this script to your page
-        setTimeout(function() {
-          document.getElementById('success-alert').style.display = 'none';
-        }, 2000); // Adjust the delay (in milliseconds) as needed
-      </script>
-    <% } %>      
-  </div>
-  <div class="alertKey">
-    <% if(locals.messageS) { %>
-      <div class="alert alert-success alert-dismissible fade show" role="alert" style="position: absolute; right: 20px; bottom: 30px;"
-        data-bs-autohide="true" data-bs-delay="2000" id="success-alert"> 
-        <strong><%= messageS %></strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-  
-      <script>
-        // Add this script to your page
-        setTimeout(function() {
-          document.getElementById('success-alert').style.display = 'none';
-        }, 2000); // Adjust the delay (in milliseconds) as needed
-      </script>
-    <% } %>      
-  </div>
-        
-
-  <script src="../../public/jsFiles/cart.js"></script>
-        
+    <%- include('../layout/adText')-%>
+    <%- include('../layout/alert')-%>
+<script src="../../public/jsFiles/cart.js"></script>
 <%- include('../layout/footer')-%>
 <%- include('../layout/footerHTML')-%>
