--- a/public/css/orderConfirmation.css
+++ b/public/css/orderConfirmation.css
@@ -87,3 +87,10 @@ h3 {
     margin-top: 30px;
     text-align: center;
 }
+.swal2-popup{
+    border-radius: 30px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.633);
+    background-color: rgb(0, 0, 0) !important;
+    border: 1px solid rgba(49, 49, 49, 0.715);
+    color: white !important;
+}
